# ply2tiff_converter

./: .gitignore  CMakeLists.txt  ReadMe.md  app.rc  main.cpp  mainwindow.cpp  mainwindow.h  ply2tiff_converter.cpp  ply_processor.cpp  ply_processor.h  ply_tiff_converter_widget.cpp  ply_tiff_converter_widget.h  ui_strings.h
include/: a_ply2tiff_converter.h  advanced_ply_processor.h  happly.h  mainwindow.h  ply_processor.h
resources/: resources.qrc
scripts/: convert_to_ico.py
src/: a_ply2tiff_converter.cpp  advanced_ply_processor.cpp  mainwindow.cpp  ply2tiff_converter.cpp  ply_processor.cpp
